=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.015

=over

=item *

Added initial support for FreeBSD!  Currently it only supports FreeBSD
5.2.1 with GNU make (gmake) installed, as that was the only available
testable environment.  Would be nice if someone with more experience
in BSD Makefiles could get Krang's Makefiles to work with BSD make.
There should be nothing keeping Krang from working with earlier
versions of FreeBSD, but that will require someone to pick up the BSD
ball and run with it.  [Peter]


=item *

Fixed site editor to check that URLs don't have paths attached to them
and that paths are obsolute. [Sam]

=item *

Fixed krang_upgrade to use Krang::Platform.  Added a new method to
Krang::Platform, post_upgrade_message(). [Sam]

=item *

Upgraded XML-Writer, HTML-Parser, and Tar-Archive to get rid of warnings.
[Perrin]

=item *

Upgraded mod_perl and apache to latest releases. [Perrin]

=item *

Fixed the behavior of Krang::Publisher->preview_story().  Following
the original spec, it now writes the story out to all categories in
the preview path.  Fixed Krang::Story->preview_path as well. [Peter]

=item *

Upgraded Test::Harness to 2.40 to enable warnings during tests.  Fixed
a number of warnings in the test files. [Perrin] [Sam]

=item *

Fixed bug where schedule tests would fail frequently due to
krang_schedulectl leaving bad PID files around.  Also made the
schedule tests quiet unless an error occurs. [Sam]

=item *

Fixed a bug where using a category_trail_loop in a category element
template produced an ISE. [Sam]

=item *

Added support for Fedora Core 1. [Perrin Harkins]

=item *

Moved Krang user/group creation from krang_install to Krang::Platform.
This can now be overridden on a platform-by-platform basis. [Peter]

=item *

Created Krang::Platform->find_bin().  Use of this sub now needs to be
propegated throughout krang_install along with Krang::Platform and its